test/type-error-4.ktn
def foo ([a] -> a):
  ->q q __from_some
